# capitaine-ai

./: AGENT.md  README.md  pyproject.toml
capitaine_ai/: __init__.py  captain.py  crew.py  delegation.py  progress.py  task.py
memory/: JOURNAL.md
tests/: test_capitaine.py
